@@ -4,14 +4,13 @@ import com.urise.webapp.exception.StorageException;
 import com.urise.webapp.model.Resume;
 import com.urise.webapp.storage.serialize.ObjectStreamSerializer;
 
-import java.io.BufferedInputStream;
-import java.io.IOException;
-import java.io.OutputStream;
+import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class PathStorage extends AbstractStorage<Path> {
@@ -31,20 +30,12 @@ public class PathStorage extends AbstractStorage<Path> {
 
     @Override
     public void clear() {
-        try {
-            Files.list(directory).forEach(this::doDelete);
-        } catch (IOException e) {
-            throw new StorageException("Path delete error", null);
-        }
+        getFilesList().forEach(this::doDelete);
     }
 
     @Override
     public int size() {
-        String[] list = directory.toFile().list();
-        if (list == null) {
-            throw new StorageException("Directory read error", null);
-        }
-        return list.length;
+        return (int) getFilesList().count();
     }
 
     @Override
@@ -55,7 +46,7 @@ public class PathStorage extends AbstractStorage<Path> {
     @Override
     protected void doUpdate(Resume r, Path Path) {
         try {
-            streamSerializer.doWrite(r, (OutputStream) Path);
+            streamSerializer.doWrite(r, new BufferedOutputStream(Files.newOutputStream(Path)));
         } catch (IOException e) {
             throw new StorageException("Error update Resume", null, e);
         }
@@ -63,13 +54,14 @@ public class PathStorage extends AbstractStorage<Path> {
 
     @Override
     public boolean isExisting(Path Path) {
-        return Files.exists(Path);
+        return Files.isRegularFile(Path);
     }
 
     @Override
     protected void doSave(Resume r, Path Path) {
         try {
             Files.createFile(Path);
+            streamSerializer.doWrite(r, new BufferedOutputStream(Files.newOutputStream(Path)));
         } catch (IOException e) {
             throw new StorageException("Error save R", null, e);
         }
@@ -94,10 +86,14 @@ public class PathStorage extends AbstractStorage<Path> {
     }
 
     protected List<Resume> getALL() {
-        try (Stream<Path> walk = Files.list(Paths.get(String.valueOf(directory)))) {
-            return walk.map(this::doGet).toList();
+        return getFilesList().map(this::doGet).collect(Collectors.toList());
+    }
+
+    private Stream<Path> getFilesList() {
+        try {
+            return Files.list(directory);
         } catch (IOException e) {
-            throw new StorageException("Error getting all resumes", null, e);
+            throw new StorageException("Directory read error", null, e);
         }
     }
 
